# donna-ai

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  DEV_TODO.md  PM_TODO.md  README.md  SPEC.md  UI_DESIGN.md  docker-compose.yml  pyproject.toml
backend/: db.py  main.py  migrate.py
backend/api/: audit.py  clause_draft.py  clause_search.py  cross_references.py  deal_brief.py  defined_terms.py  donna.py  donna_recommendations.py  export.py  firm_profile.py  health.py  imports.py  issue_export.py  issues.py  lineage.py  mark_sent.py  nodes.py  redline.py  revision_import.py  revision_recommend.py  revision_reset.py  revision_review.py  settings.py  version_delete.py
backend/config/: settings.py
backend/models/: audit.py  brainstorm.py  clause_draft.py  clause_search.py  contract_tree.py  cross_references.py  deal_brief.py  defined_terms.py  donna.py  export.py  extraction.py  firm_profile.py  imports.py  insights.py  issue_export.py  issues.py  lineage.py  llm.py  mark_sent.py  nodes.py  recommendations.py  redline.py  revision_import.py  revision_match.py  revision_recommend.py  revision_review.py  settings.py  snapshots.py  style.py  version_delete.py
backend/prompts/: brainstorm_chat_v1.txt  classify_backmatter_region_v1.txt  classify_frontmatter_region_v1.txt  classify_role_v1_deprecated.txt  clause_draft_v1.txt  clause_search_v1.txt  (+13 more)
db/: schema.sql  seed.sql
evals/: README.md
frontend/: package-lock.json  package.json
sample-contracts/: Meridian-Ardent-JV-Agreement-counterparty-revision.docx  Meridian-Ardent-JV-Agreement.docx
(+204 files in other folders)
